--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -36,13 +36,15 @@
 .projects-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    column-gap: 10%;
+    row-gap: 10%;
+    margin:2em 5%;
 }
 
 .projects-item {
     display: flex;
     flex-direction: column;
-    background: var(--color-bg-variant);
-    padding: 1.2rem;
+    background: var(--secondary-color);
     border-radius: 2rem;
     border: 1px solid transparent;
     height: 100%;
@@ -55,16 +57,18 @@
 }
 
 .projects-item-image {
-    border-radius: 1.5rem;
+    border-radius: 1.5rem 1.5rem 0 0;
     overflow: hidden;
-    height: 200px;
 }
 
 .projects-item-image img {
     width: 100%;
-    height: 100%;
-    min-height: 200px;
-    object-fit: contain;
+    min-width: 160px;
+    min-height: 160px;
+}
+
+.projects-item-content {
+    padding: 10px;
 }
 
 .projects-item h3 {
